* This version supports both Qt5 and Qt6 builds.

Internal changes:
* The process management system has been completely rewritten.
* The architecture has been optimized and improved.

Fixes and Minor Enhancements:
* Added display of the number of files being updated to the "Update the "Database" menu. (Can be disabled in Settings).
* Some items of the database header have been changed.
* The database now stores the date and time it was created as a separate value.
* The speed display is brought to the standard form: MiB/sec >> MiB/s
* In the path input field, the clear button is hidden when it doesn't make sense.
* Prevented some database columns from being accidentally hidden on first run.
* When working with a Desktop folder, there is no longer an unnecessary notification of a reserve save path.
* If the last saved path does not exist, it now goes to the parent folder, if there is one.
* After creating a new database, the path to it is now remembered when returning to the file system.

---
Veretino 0.3.12
* More accurate and smooth process speed and remaining time.
* After checking a subfolder, filtering of Mismatches is applied only if they were found in this particular subfolder.
* Both extensions are now used when discovering existing Branches.
* Settings tab "Permanent Filter": Fixed the Ignore/Include switch when the list of extensions is empty.

Veretino 0.3.11
* Improved stability when switching databases.
* Improved performance and UI responsiveness.

Veretino 0.3.10
* Improved filter creation/selection.
* The Permanent Filter now has preset templates.
* "Folder Contents" dialog: the database/sha files have become unfilterable.

Veretino 0.3.9
* The checked checksums have become colored.
* The filtered View is highlighted by changing the background.
* A database file with a predefined WorkDir can now be placed in the current one.
* Added the ability to copy files and folders from the database.

Veretino 0.3.8